# ed

./: Cargo.toml
.github/workflows/: tests.yaml
src/: args.rs  main.rs
src/bmi/: mod.rs  new.rs  prime.rs
src/bmr/: mod.rs
src/bmr/cunningham/: mod.rs
src/bmr/harris_benedict/: mod.rs  revised.rs
src/bmr/katch_mcardle/: hyprid.rs  mod.rs
src/bmr/mifflin_st_jeor/: mod.rs
src/tdee/: mod.rs
