[package]
name = "ed"
version = "0.1.1"
edition = "2021"
authors = ["fawn <fawn@envs.net>"]
repository = "https://github.com/fawni/ed"
license = "ISC"

[dependencies]
clap = { version = "4.1", features = ["cargo"] }
owo-colors = "3.5"
dialoguer = "0.10"

[profile.release]
lto = true
strip = true
codegen-units = 1
